tests/ui/resolve/use_suggestion_placement.stderr
error[E0425]: cannot find type `Path` in this scope
  --> $DIR/use_suggestion_placement.rs:19:16
   |
LL |     type Bar = Path;
   |                ^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL +     use std::path::Path;
   |

error[E0425]: cannot find value `A` in this scope
  --> $DIR/use_suggestion_placement.rs:24:13
   |
LL |     let _ = A;
   |             ^ not found in this scope
   |
help: consider importing this constant
   |
LL + use m::A;
   |

error[E0425]: cannot find type `HashMap` in this scope
  --> $DIR/use_suggestion_placement.rs:29:23
   |
LL |     type Dict<K, V> = HashMap<K, V>;
   |                       ^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL + use std::collections::HashMap;
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
